// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Creates changeview action for Inbox 1`] = `
Object {
  "payload": "Inbox",
  "type": "CHANGE_VIEW",
}
`;

exports[`Creates changeview action for Playlist 1`] = `
Object {
  "payload": "username",
  "type": "CHANGE_USERNAME",
}
`;

exports[`Creates changeview action for Playlist 2`] = `
Object {
  "payload": "password",
  "type": "CHANGE_USERNAME",
}
`;

exports[`reducer changes state and renders correctly 1`] = `
Object {
  "header": Object {
    "view": "Authentication",
  },
  "main": Object {
    "authView": "login",
    "email": "",
    "iTunesResult": Array [
      Object {
        "artistId": 127981066,
        "artistName": "WNYC Studios",
        "artistViewUrl": "https://itunes.apple.com/us/artist/wnyc/id127981066?mt=2&uo=4",
        "artworkUrl100": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "artworkUrl30": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/30x30bb.jpg",
        "artworkUrl60": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/60x60bb.jpg",
        "artworkUrl600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "collectionCensoredName": "Note to Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 561470997,
        "collectionName": "Note to Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/note-to-self/id561470997?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://feeds.wnyc.org/notetoself-podcast",
        "genreIds": Array [
          "1448",
          "26",
          "1318",
        ],
        "genres": Array [
          "Tech News",
          "Podcasts",
          "Technology",
        ],
        "kind": "podcast",
        "primaryGenreName": "Tech News",
        "releaseDate": "2017-04-05T04:00:00Z",
        "trackCensoredName": "Note to Self",
        "trackCount": 87,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 561470997,
        "trackName": "Note to Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/note-to-self/id561470997?mt=2&uo=4",
        "wrapperType": "track",
      },
      Object {
        "artistName": "Note to Beautiful Self",
        "artworkUrl100": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/100x100bb.jpg",
        "artworkUrl30": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/30x30bb.jpg",
        "artworkUrl60": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/60x60bb.jpg",
        "artworkUrl600": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/600x600bb.jpg",
        "collectionCensoredName": "Note to Beautiful Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 305727517,
        "collectionName": "Note to Beautiful Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/note-to-beautiful-self/id305727517?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://www.blogtalkradio.com/note2beautifulself/podcast",
        "genreIds": Array [
          "1410",
          "26",
          "1321",
        ],
        "genres": Array [
          "Careers",
          "Podcasts",
          "Business",
        ],
        "kind": "podcast",
        "primaryGenreName": "Careers",
        "releaseDate": "2015-04-12T21:30:00Z",
        "trackCensoredName": "Note to Beautiful Self",
        "trackCount": 39,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 305727517,
        "trackName": "Note to Beautiful Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/note-to-beautiful-self/id305727517?mt=2&uo=4",
        "wrapperType": "track",
      },
      Object {
        "artistName": "C David Baker",
        "artworkUrl100": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/100x100bb.jpg",
        "artworkUrl30": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/30x30bb.jpg",
        "artworkUrl60": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/60x60bb.jpg",
        "artworkUrl600": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/600x600bb.jpg",
        "collectionCensoredName": "Notes to Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 1197015104,
        "collectionName": "Notes to Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/notes-to-self/id1197015104?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://cdbaker.podomatic.com/rss2.xml",
        "genreIds": Array [
          "1401",
          "26",
          "1301",
        ],
        "genres": Array [
          "Literature",
          "Podcasts",
          "Arts",
        ],
        "kind": "podcast",
        "primaryGenreName": "Literature",
        "releaseDate": "2017-04-07T20:41:00Z",
        "trackCensoredName": "Notes to Self",
        "trackCount": 9,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 1197015104,
        "trackName": "Notes to Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/notes-to-self/id1197015104?mt=2&uo=4",
        "wrapperType": "track",
      },
    ],
    "inbox": Object {
      "1": Object {
        "bookmark": false,
        "creator": "NPR",
        "feed": Object {
          "duration": "00:26:14",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself032917_cms745660_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/cambridge-analytica-psychometrics/",
          "pubDate": "Wed, 29 Mar 2017 00:00:00 -0400",
          "subtitle": "Data mining is nothing new in presidential campaigns. But in 2016, the Trump team took voter research to a new level. They hired consultants called Cambridge Analytica, which says it has thousands of data points on every American. They also claim they ca",
          "title": "Deep-Dark-Data-Driven Politics",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": true,
        "tag": "Tech News",
        "title": "Note to Self",
      },
      "2": Object {
        "bookmark": true,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:17:93",
          "enclosure": Object {
            "length": 43051258,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT9261655165.mp3",
          },
          "pubDate": "Thu, 06 Apr 2017 15:07:00 -0000",
          "subtitle": "Science Vs The News + a Surprise",
          "title": "Death, Lies and Lemmings",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": false,
        "tag": "Science",
        "title": "Science VS",
      },
      "3": Object {
        "bookmark": false,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:25:93",
          "enclosure": Object {
            "length": 62237466,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT4607516870.mp3",
          },
          "pubDate": "Thu, 16 Mar 2017 15:54:00 -0000",
          "subtitle": "How bad will it get and how do scientists know humans are to blame?",
          "title": "Climate Change... the Apocalypse? ",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": true,
        "tag": "Science",
        "title": "Science VS",
      },
      "4": Object {
        "bookmark": false,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:27:00",
          "enclosure": Object {
            "length": 64801018,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT9750488370.mp3?updated=1489088490",
          },
          "pubDate": "Thu, 09 Mar 2017 20:00:00 -0000",
          "subtitle": "Are immigrants bad for America? ",
          "title": "Immigration",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": false,
        "tag": "Science",
        "title": "Science Vs",
      },
      "5": Object {
        "bookmark": false,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:17:35",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself041217_cms749087_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/infomagical-focus-bootcamp/",
          "pubDate": "Wed, 12 Apr 2017 00:00:00 -0400",
          "subtitle": " There is a lot to take in in our world right now. And there are a lot of ways to do it. You can read articles posted by your Facebook friends, or by the journalists you follow on Twitter. You can watch cable news with your morning oatmeal. Which makes it",
          "title": "Spring Cleaning for the Min",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
      "6": Object {
        "bookmark": true,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:19:25",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself030117_cms739269_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/wearable-tech-brain-boost/",
          "pubDate": "Wed, 01 Mar 2017 00:00:00 -0500",
          "subtitle": " At Manoush’s house, there’s an object the size of a big potato chip. Which she stuck to her forehead, and used to zap her brain. This brain stimulation is supposed to calm you down. Maybe replace a glass of wine, just wind you down a little. But it turns",
          "title": "Zapping Your Brain To Blis",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
      "7": Object {
        "bookmark": false,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:18:07",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself030817_cms740978_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/snapchat-ipo/",
          "pubDate": "Wed, 08 Mar 2017 00:00:00 -0500",
          "subtitle": " If you are between the ages of 18 and 34, there’s a good chance you’ve already checked Snapchat today. This week, Manoush joins you—despite her reservations. Those reservations are not just because the Note to Self team isn’t the app’s target demo.",
          "title": "Will You Do a Snapchat Streak With Me?",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
    },
    "inboxFilters": Object {
      "bookmarked": "bookmarkedOff",
      "liked": "likedOff",
      "tag": "All",
      "time": "timeOff",
    },
    "modalVisible": false,
    "password": "",
    "token": null,
    "username": "test",
    "view": "Authentication",
  },
  "player": Object {
    "currentEpisode": null,
    "currentEpisodeTitle": null,
    "currentPlayingTime": "0:00",
    "currentSoundInstance": null,
    "currentSpeed": 1,
    "isFullSizeModalVisible": false,
    "isModalVisible": false,
    "isPlaying": false,
  },
  "swipe": Object {
    "currentlyOpenSwipeable": null,
    "isAddPlaylistModalVisible": false,
    "isLeftActionActivated": false,
    "isLeftToggled": false,
    "isRightActionActivated": false,
  },
}
`;

exports[`reducer changes state and renders correctly 2`] = `
Object {
  "header": Object {
    "view": "Authentication",
  },
  "main": Object {
    "authView": "login",
    "email": "",
    "iTunesResult": Array [
      Object {
        "artistId": 127981066,
        "artistName": "WNYC Studios",
        "artistViewUrl": "https://itunes.apple.com/us/artist/wnyc/id127981066?mt=2&uo=4",
        "artworkUrl100": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "artworkUrl30": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/30x30bb.jpg",
        "artworkUrl60": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/60x60bb.jpg",
        "artworkUrl600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "collectionCensoredName": "Note to Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 561470997,
        "collectionName": "Note to Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/note-to-self/id561470997?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://feeds.wnyc.org/notetoself-podcast",
        "genreIds": Array [
          "1448",
          "26",
          "1318",
        ],
        "genres": Array [
          "Tech News",
          "Podcasts",
          "Technology",
        ],
        "kind": "podcast",
        "primaryGenreName": "Tech News",
        "releaseDate": "2017-04-05T04:00:00Z",
        "trackCensoredName": "Note to Self",
        "trackCount": 87,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 561470997,
        "trackName": "Note to Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/note-to-self/id561470997?mt=2&uo=4",
        "wrapperType": "track",
      },
      Object {
        "artistName": "Note to Beautiful Self",
        "artworkUrl100": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/100x100bb.jpg",
        "artworkUrl30": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/30x30bb.jpg",
        "artworkUrl60": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/60x60bb.jpg",
        "artworkUrl600": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/600x600bb.jpg",
        "collectionCensoredName": "Note to Beautiful Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 305727517,
        "collectionName": "Note to Beautiful Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/note-to-beautiful-self/id305727517?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://www.blogtalkradio.com/note2beautifulself/podcast",
        "genreIds": Array [
          "1410",
          "26",
          "1321",
        ],
        "genres": Array [
          "Careers",
          "Podcasts",
          "Business",
        ],
        "kind": "podcast",
        "primaryGenreName": "Careers",
        "releaseDate": "2015-04-12T21:30:00Z",
        "trackCensoredName": "Note to Beautiful Self",
        "trackCount": 39,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 305727517,
        "trackName": "Note to Beautiful Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/note-to-beautiful-self/id305727517?mt=2&uo=4",
        "wrapperType": "track",
      },
      Object {
        "artistName": "C David Baker",
        "artworkUrl100": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/100x100bb.jpg",
        "artworkUrl30": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/30x30bb.jpg",
        "artworkUrl60": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/60x60bb.jpg",
        "artworkUrl600": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/600x600bb.jpg",
        "collectionCensoredName": "Notes to Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 1197015104,
        "collectionName": "Notes to Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/notes-to-self/id1197015104?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://cdbaker.podomatic.com/rss2.xml",
        "genreIds": Array [
          "1401",
          "26",
          "1301",
        ],
        "genres": Array [
          "Literature",
          "Podcasts",
          "Arts",
        ],
        "kind": "podcast",
        "primaryGenreName": "Literature",
        "releaseDate": "2017-04-07T20:41:00Z",
        "trackCensoredName": "Notes to Self",
        "trackCount": 9,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 1197015104,
        "trackName": "Notes to Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/notes-to-self/id1197015104?mt=2&uo=4",
        "wrapperType": "track",
      },
    ],
    "inbox": Object {
      "1": Object {
        "bookmark": false,
        "creator": "NPR",
        "feed": Object {
          "duration": "00:26:14",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself032917_cms745660_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/cambridge-analytica-psychometrics/",
          "pubDate": "Wed, 29 Mar 2017 00:00:00 -0400",
          "subtitle": "Data mining is nothing new in presidential campaigns. But in 2016, the Trump team took voter research to a new level. They hired consultants called Cambridge Analytica, which says it has thousands of data points on every American. They also claim they ca",
          "title": "Deep-Dark-Data-Driven Politics",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": true,
        "tag": "Tech News",
        "title": "Note to Self",
      },
      "2": Object {
        "bookmark": true,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:17:93",
          "enclosure": Object {
            "length": 43051258,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT9261655165.mp3",
          },
          "pubDate": "Thu, 06 Apr 2017 15:07:00 -0000",
          "subtitle": "Science Vs The News + a Surprise",
          "title": "Death, Lies and Lemmings",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": false,
        "tag": "Science",
        "title": "Science VS",
      },
      "3": Object {
        "bookmark": false,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:25:93",
          "enclosure": Object {
            "length": 62237466,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT4607516870.mp3",
          },
          "pubDate": "Thu, 16 Mar 2017 15:54:00 -0000",
          "subtitle": "How bad will it get and how do scientists know humans are to blame?",
          "title": "Climate Change... the Apocalypse? ",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": true,
        "tag": "Science",
        "title": "Science VS",
      },
      "4": Object {
        "bookmark": false,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:27:00",
          "enclosure": Object {
            "length": 64801018,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT9750488370.mp3?updated=1489088490",
          },
          "pubDate": "Thu, 09 Mar 2017 20:00:00 -0000",
          "subtitle": "Are immigrants bad for America? ",
          "title": "Immigration",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": false,
        "tag": "Science",
        "title": "Science Vs",
      },
      "5": Object {
        "bookmark": false,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:17:35",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself041217_cms749087_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/infomagical-focus-bootcamp/",
          "pubDate": "Wed, 12 Apr 2017 00:00:00 -0400",
          "subtitle": " There is a lot to take in in our world right now. And there are a lot of ways to do it. You can read articles posted by your Facebook friends, or by the journalists you follow on Twitter. You can watch cable news with your morning oatmeal. Which makes it",
          "title": "Spring Cleaning for the Min",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
      "6": Object {
        "bookmark": true,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:19:25",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself030117_cms739269_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/wearable-tech-brain-boost/",
          "pubDate": "Wed, 01 Mar 2017 00:00:00 -0500",
          "subtitle": " At Manoush’s house, there’s an object the size of a big potato chip. Which she stuck to her forehead, and used to zap her brain. This brain stimulation is supposed to calm you down. Maybe replace a glass of wine, just wind you down a little. But it turns",
          "title": "Zapping Your Brain To Blis",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
      "7": Object {
        "bookmark": false,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:18:07",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself030817_cms740978_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/snapchat-ipo/",
          "pubDate": "Wed, 08 Mar 2017 00:00:00 -0500",
          "subtitle": " If you are between the ages of 18 and 34, there’s a good chance you’ve already checked Snapchat today. This week, Manoush joins you—despite her reservations. Those reservations are not just because the Note to Self team isn’t the app’s target demo.",
          "title": "Will You Do a Snapchat Streak With Me?",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
    },
    "inboxFilters": Object {
      "bookmarked": "bookmarkedOff",
      "liked": "likedOff",
      "tag": "All",
      "time": "timeOff",
    },
    "modalVisible": false,
    "password": "",
    "token": null,
    "username": "username",
    "view": "Authentication",
  },
  "player": Object {
    "currentEpisode": null,
    "currentEpisodeTitle": null,
    "currentPlayingTime": "0:00",
    "currentSoundInstance": null,
    "currentSpeed": 1,
    "isFullSizeModalVisible": false,
    "isModalVisible": false,
    "isPlaying": false,
  },
  "swipe": Object {
    "currentlyOpenSwipeable": null,
    "isAddPlaylistModalVisible": false,
    "isLeftActionActivated": false,
    "isLeftToggled": false,
    "isRightActionActivated": false,
  },
}
`;

exports[`reducer changes state and renders correctly 3`] = `
Object {
  "header": Object {
    "view": "Authentication",
  },
  "main": Object {
    "authView": "login",
    "email": "",
    "iTunesResult": Array [
      Object {
        "artistId": 127981066,
        "artistName": "WNYC Studios",
        "artistViewUrl": "https://itunes.apple.com/us/artist/wnyc/id127981066?mt=2&uo=4",
        "artworkUrl100": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "artworkUrl30": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/30x30bb.jpg",
        "artworkUrl60": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/60x60bb.jpg",
        "artworkUrl600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "collectionCensoredName": "Note to Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 561470997,
        "collectionName": "Note to Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/note-to-self/id561470997?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://feeds.wnyc.org/notetoself-podcast",
        "genreIds": Array [
          "1448",
          "26",
          "1318",
        ],
        "genres": Array [
          "Tech News",
          "Podcasts",
          "Technology",
        ],
        "kind": "podcast",
        "primaryGenreName": "Tech News",
        "releaseDate": "2017-04-05T04:00:00Z",
        "trackCensoredName": "Note to Self",
        "trackCount": 87,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 561470997,
        "trackName": "Note to Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/note-to-self/id561470997?mt=2&uo=4",
        "wrapperType": "track",
      },
      Object {
        "artistName": "Note to Beautiful Self",
        "artworkUrl100": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/100x100bb.jpg",
        "artworkUrl30": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/30x30bb.jpg",
        "artworkUrl60": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/60x60bb.jpg",
        "artworkUrl600": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/600x600bb.jpg",
        "collectionCensoredName": "Note to Beautiful Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 305727517,
        "collectionName": "Note to Beautiful Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/note-to-beautiful-self/id305727517?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://www.blogtalkradio.com/note2beautifulself/podcast",
        "genreIds": Array [
          "1410",
          "26",
          "1321",
        ],
        "genres": Array [
          "Careers",
          "Podcasts",
          "Business",
        ],
        "kind": "podcast",
        "primaryGenreName": "Careers",
        "releaseDate": "2015-04-12T21:30:00Z",
        "trackCensoredName": "Note to Beautiful Self",
        "trackCount": 39,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 305727517,
        "trackName": "Note to Beautiful Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/note-to-beautiful-self/id305727517?mt=2&uo=4",
        "wrapperType": "track",
      },
      Object {
        "artistName": "C David Baker",
        "artworkUrl100": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/100x100bb.jpg",
        "artworkUrl30": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/30x30bb.jpg",
        "artworkUrl60": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/60x60bb.jpg",
        "artworkUrl600": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/600x600bb.jpg",
        "collectionCensoredName": "Notes to Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 1197015104,
        "collectionName": "Notes to Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/notes-to-self/id1197015104?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://cdbaker.podomatic.com/rss2.xml",
        "genreIds": Array [
          "1401",
          "26",
          "1301",
        ],
        "genres": Array [
          "Literature",
          "Podcasts",
          "Arts",
        ],
        "kind": "podcast",
        "primaryGenreName": "Literature",
        "releaseDate": "2017-04-07T20:41:00Z",
        "trackCensoredName": "Notes to Self",
        "trackCount": 9,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 1197015104,
        "trackName": "Notes to Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/notes-to-self/id1197015104?mt=2&uo=4",
        "wrapperType": "track",
      },
    ],
    "inbox": Object {
      "1": Object {
        "bookmark": false,
        "creator": "NPR",
        "feed": Object {
          "duration": "00:26:14",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself032917_cms745660_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/cambridge-analytica-psychometrics/",
          "pubDate": "Wed, 29 Mar 2017 00:00:00 -0400",
          "subtitle": "Data mining is nothing new in presidential campaigns. But in 2016, the Trump team took voter research to a new level. They hired consultants called Cambridge Analytica, which says it has thousands of data points on every American. They also claim they ca",
          "title": "Deep-Dark-Data-Driven Politics",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": true,
        "tag": "Tech News",
        "title": "Note to Self",
      },
      "2": Object {
        "bookmark": true,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:17:93",
          "enclosure": Object {
            "length": 43051258,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT9261655165.mp3",
          },
          "pubDate": "Thu, 06 Apr 2017 15:07:00 -0000",
          "subtitle": "Science Vs The News + a Surprise",
          "title": "Death, Lies and Lemmings",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": false,
        "tag": "Science",
        "title": "Science VS",
      },
      "3": Object {
        "bookmark": false,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:25:93",
          "enclosure": Object {
            "length": 62237466,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT4607516870.mp3",
          },
          "pubDate": "Thu, 16 Mar 2017 15:54:00 -0000",
          "subtitle": "How bad will it get and how do scientists know humans are to blame?",
          "title": "Climate Change... the Apocalypse? ",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": true,
        "tag": "Science",
        "title": "Science VS",
      },
      "4": Object {
        "bookmark": false,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:27:00",
          "enclosure": Object {
            "length": 64801018,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT9750488370.mp3?updated=1489088490",
          },
          "pubDate": "Thu, 09 Mar 2017 20:00:00 -0000",
          "subtitle": "Are immigrants bad for America? ",
          "title": "Immigration",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": false,
        "tag": "Science",
        "title": "Science Vs",
      },
      "5": Object {
        "bookmark": false,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:17:35",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself041217_cms749087_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/infomagical-focus-bootcamp/",
          "pubDate": "Wed, 12 Apr 2017 00:00:00 -0400",
          "subtitle": " There is a lot to take in in our world right now. And there are a lot of ways to do it. You can read articles posted by your Facebook friends, or by the journalists you follow on Twitter. You can watch cable news with your morning oatmeal. Which makes it",
          "title": "Spring Cleaning for the Min",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
      "6": Object {
        "bookmark": true,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:19:25",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself030117_cms739269_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/wearable-tech-brain-boost/",
          "pubDate": "Wed, 01 Mar 2017 00:00:00 -0500",
          "subtitle": " At Manoush’s house, there’s an object the size of a big potato chip. Which she stuck to her forehead, and used to zap her brain. This brain stimulation is supposed to calm you down. Maybe replace a glass of wine, just wind you down a little. But it turns",
          "title": "Zapping Your Brain To Blis",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
      "7": Object {
        "bookmark": false,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:18:07",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself030817_cms740978_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/snapchat-ipo/",
          "pubDate": "Wed, 08 Mar 2017 00:00:00 -0500",
          "subtitle": " If you are between the ages of 18 and 34, there’s a good chance you’ve already checked Snapchat today. This week, Manoush joins you—despite her reservations. Those reservations are not just because the Note to Self team isn’t the app’s target demo.",
          "title": "Will You Do a Snapchat Streak With Me?",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
    },
    "inboxFilters": Object {
      "bookmarked": "bookmarkedOff",
      "liked": "likedOff",
      "tag": "All",
      "time": "timeOff",
    },
    "modalVisible": false,
    "password": "password",
    "token": null,
    "username": "",
    "view": "Authentication",
  },
  "player": Object {
    "currentEpisode": null,
    "currentEpisodeTitle": null,
    "currentPlayingTime": "0:00",
    "currentSoundInstance": null,
    "currentSpeed": 1,
    "isFullSizeModalVisible": false,
    "isModalVisible": false,
    "isPlaying": false,
  },
  "swipe": Object {
    "currentlyOpenSwipeable": null,
    "isAddPlaylistModalVisible": false,
    "isLeftActionActivated": false,
    "isLeftToggled": false,
    "isRightActionActivated": false,
  },
}
`;

exports[`reducer returns default state and renders correctly 1`] = `
Object {
  "header": Object {
    "view": "Authentication",
  },
  "main": Object {
    "authView": "login",
    "email": "",
    "iTunesResult": Array [
      Object {
        "artistId": 127981066,
        "artistName": "WNYC Studios",
        "artistViewUrl": "https://itunes.apple.com/us/artist/wnyc/id127981066?mt=2&uo=4",
        "artworkUrl100": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "artworkUrl30": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/30x30bb.jpg",
        "artworkUrl60": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/60x60bb.jpg",
        "artworkUrl600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "collectionCensoredName": "Note to Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 561470997,
        "collectionName": "Note to Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/note-to-self/id561470997?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://feeds.wnyc.org/notetoself-podcast",
        "genreIds": Array [
          "1448",
          "26",
          "1318",
        ],
        "genres": Array [
          "Tech News",
          "Podcasts",
          "Technology",
        ],
        "kind": "podcast",
        "primaryGenreName": "Tech News",
        "releaseDate": "2017-04-05T04:00:00Z",
        "trackCensoredName": "Note to Self",
        "trackCount": 87,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 561470997,
        "trackName": "Note to Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/note-to-self/id561470997?mt=2&uo=4",
        "wrapperType": "track",
      },
      Object {
        "artistName": "Note to Beautiful Self",
        "artworkUrl100": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/100x100bb.jpg",
        "artworkUrl30": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/30x30bb.jpg",
        "artworkUrl60": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/60x60bb.jpg",
        "artworkUrl600": "http://is5.mzstatic.com/image/thumb/Music71/v4/41/27/e2/4127e299-472c-4fe6-c6bd-bb2594b39d03/source/600x600bb.jpg",
        "collectionCensoredName": "Note to Beautiful Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 305727517,
        "collectionName": "Note to Beautiful Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/note-to-beautiful-self/id305727517?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://www.blogtalkradio.com/note2beautifulself/podcast",
        "genreIds": Array [
          "1410",
          "26",
          "1321",
        ],
        "genres": Array [
          "Careers",
          "Podcasts",
          "Business",
        ],
        "kind": "podcast",
        "primaryGenreName": "Careers",
        "releaseDate": "2015-04-12T21:30:00Z",
        "trackCensoredName": "Note to Beautiful Self",
        "trackCount": 39,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 305727517,
        "trackName": "Note to Beautiful Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/note-to-beautiful-self/id305727517?mt=2&uo=4",
        "wrapperType": "track",
      },
      Object {
        "artistName": "C David Baker",
        "artworkUrl100": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/100x100bb.jpg",
        "artworkUrl30": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/30x30bb.jpg",
        "artworkUrl60": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/60x60bb.jpg",
        "artworkUrl600": "http://is2.mzstatic.com/image/thumb/Music111/v4/8b/f6/0f/8bf60f3d-da43-c1d8-0d89-096f36a4b7e2/source/600x600bb.jpg",
        "collectionCensoredName": "Notes to Self",
        "collectionExplicitness": "cleaned",
        "collectionHdPrice": 0,
        "collectionId": 1197015104,
        "collectionName": "Notes to Self",
        "collectionPrice": 0,
        "collectionViewUrl": "https://itunes.apple.com/us/podcast/notes-to-self/id1197015104?mt=2&uo=4",
        "contentAdvisoryRating": "Clean",
        "country": "USA",
        "currency": "USD",
        "feedUrl": "http://cdbaker.podomatic.com/rss2.xml",
        "genreIds": Array [
          "1401",
          "26",
          "1301",
        ],
        "genres": Array [
          "Literature",
          "Podcasts",
          "Arts",
        ],
        "kind": "podcast",
        "primaryGenreName": "Literature",
        "releaseDate": "2017-04-07T20:41:00Z",
        "trackCensoredName": "Notes to Self",
        "trackCount": 9,
        "trackExplicitness": "cleaned",
        "trackHdPrice": 0,
        "trackHdRentalPrice": 0,
        "trackId": 1197015104,
        "trackName": "Notes to Self",
        "trackPrice": 0,
        "trackRentalPrice": 0,
        "trackViewUrl": "https://itunes.apple.com/us/podcast/notes-to-self/id1197015104?mt=2&uo=4",
        "wrapperType": "track",
      },
    ],
    "inbox": Object {
      "1": Object {
        "bookmark": false,
        "creator": "NPR",
        "feed": Object {
          "duration": "00:26:14",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself032917_cms745660_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/cambridge-analytica-psychometrics/",
          "pubDate": "Wed, 29 Mar 2017 00:00:00 -0400",
          "subtitle": "Data mining is nothing new in presidential campaigns. But in 2016, the Trump team took voter research to a new level. They hired consultants called Cambridge Analytica, which says it has thousands of data points on every American. They also claim they ca",
          "title": "Deep-Dark-Data-Driven Politics",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": true,
        "tag": "Tech News",
        "title": "Note to Self",
      },
      "2": Object {
        "bookmark": true,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:17:93",
          "enclosure": Object {
            "length": 43051258,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT9261655165.mp3",
          },
          "pubDate": "Thu, 06 Apr 2017 15:07:00 -0000",
          "subtitle": "Science Vs The News + a Surprise",
          "title": "Death, Lies and Lemmings",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": false,
        "tag": "Science",
        "title": "Science VS",
      },
      "3": Object {
        "bookmark": false,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:25:93",
          "enclosure": Object {
            "length": 62237466,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT4607516870.mp3",
          },
          "pubDate": "Thu, 16 Mar 2017 15:54:00 -0000",
          "subtitle": "How bad will it get and how do scientists know humans are to blame?",
          "title": "Climate Change... the Apocalypse? ",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": true,
        "tag": "Science",
        "title": "Science VS",
      },
      "4": Object {
        "bookmark": false,
        "creator": "Gimlet Media",
        "feed": Object {
          "duration": "00:27:00",
          "enclosure": Object {
            "length": 64801018,
            "type": "audio/mpeg",
            "url": "http://traffic.megaphone.fm/GLT9750488370.mp3?updated=1489088490",
          },
          "pubDate": "Thu, 09 Mar 2017 20:00:00 -0000",
          "subtitle": "Are immigrants bad for America? ",
          "title": "Immigration",
        },
        "image": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/100x100bb.jpg",
        "image600": "http://is5.mzstatic.com/image/thumb/Music71/v4/25/1a/3a/251a3a40-c10d-0047-d93f-ae3ae0b5b480/source/600x600bb.jpg",
        "liked": false,
        "tag": "Science",
        "title": "Science Vs",
      },
      "5": Object {
        "bookmark": false,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:17:35",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself041217_cms749087_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/infomagical-focus-bootcamp/",
          "pubDate": "Wed, 12 Apr 2017 00:00:00 -0400",
          "subtitle": " There is a lot to take in in our world right now. And there are a lot of ways to do it. You can read articles posted by your Facebook friends, or by the journalists you follow on Twitter. You can watch cable news with your morning oatmeal. Which makes it",
          "title": "Spring Cleaning for the Min",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
      "6": Object {
        "bookmark": true,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:19:25",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself030117_cms739269_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/wearable-tech-brain-boost/",
          "pubDate": "Wed, 01 Mar 2017 00:00:00 -0500",
          "subtitle": " At Manoush’s house, there’s an object the size of a big potato chip. Which she stuck to her forehead, and used to zap her brain. This brain stimulation is supposed to calm you down. Maybe replace a glass of wine, just wind you down a little. But it turns",
          "title": "Zapping Your Brain To Blis",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
      "7": Object {
        "bookmark": false,
        "creator": "WNYC Studios",
        "feed": Object {
          "duration": "00:18:07",
          "enclosure": Object {
            "length": 0,
            "type": "audio/mpeg",
            "url": "https://www.podtrac.com/pts/redirect.mp3/audio.wnyc.org/notetoself/notetoself030817_cms740978_pod.mp3",
          },
          "link": "http://www.wnyc.org/story/snapchat-ipo/",
          "pubDate": "Wed, 08 Mar 2017 00:00:00 -0500",
          "subtitle": " If you are between the ages of 18 and 34, there’s a good chance you’ve already checked Snapchat today. This week, Manoush joins you—despite her reservations. Those reservations are not just because the Note to Self team isn’t the app’s target demo.",
          "title": "Will You Do a Snapchat Streak With Me?",
        },
        "image": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/100x100bb.jpg",
        "image600": "http://is3.mzstatic.com/image/thumb/Music111/v4/d6/04/42/d60442fb-dbc3-22e0-e23b-121cef5d511e/source/600x600bb.jpg",
        "liked": false,
        "tag": "Technology",
        "title": "Note to Self",
      },
    },
    "inboxFilters": Object {
      "bookmarked": "bookmarkedOff",
      "liked": "likedOff",
      "tag": "All",
      "time": "timeOff",
    },
    "modalVisible": false,
    "password": "",
    "token": null,
    "username": "",
    "view": "Authentication",
  },
  "player": Object {
    "currentEpisode": null,
    "currentEpisodeTitle": null,
    "currentPlayingTime": "0:00",
    "currentSoundInstance": null,
    "currentSpeed": 1,
    "isFullSizeModalVisible": false,
    "isModalVisible": false,
    "isPlaying": false,
  },
  "swipe": Object {
    "currentlyOpenSwipeable": null,
    "isAddPlaylistModalVisible": false,
    "isLeftActionActivated": false,
    "isLeftToggled": false,
    "isRightActionActivated": false,
  },
}
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "justifyContent": "center",
      "marginTop": 50,
      "padding": 20,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      accessible={true}
      allowFontScaling={true}
      ellipsizeMode="tail"
      style={
        Object {
          "alignSelf": "center",
          "fontSize": 30,
          "fontWeight": "600",
          "marginBottom": 20,
        }
      }
    >
      Siren
    </Text>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "justifyContent": "center",
        "marginBottom": 10,
      }
    }
  >
    <View
      style={undefined}
    >
      <TextInput
        autoCapitalize="none"
        onChangeText={[Function]}
        placeholder="Username"
        style={
          Object {
            "height": 44,
            "padding": 8,
            "width": 200,
          }
        }
        value=""
      />
      <TextInput
        autoCapitalize="none"
        onChangeText={[Function]}
        placeholder="Password"
        secureTextEntry={true}
        style={
          Object {
            "height": 44,
            "padding": 8,
            "width": 200,
          }
        }
        value=""
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      }
    }
  >
    <View>
      <View
        accessibilityComponentType="button"
        accessibilityLabel={undefined}
        accessibilityTraits={
          Array [
            "button",
          ]
        }
        accessible={true}
        hitSlop={undefined}
        isTVSelectable={true}
        onLayout={undefined}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
        testID={undefined}
        tvParallaxProperties={undefined}
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "#0C42FD",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Login
          </Text>
        </View>
      </View>
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        onPress={[Function]}
        style={
          Object {
            "alignSelf": "stretch",
            "color": "grey",
            "fontSize": 16,
            "height": 36,
            "justifyContent": "center",
            "marginTop": 10,
          }
        }
      >
        Switch to signup
      </Text>
    </View>
  </View>
</View>
`;
